# scribble

client/: package.json
client/app/: layout.tsx  page.tsx
client/app/room/[id]/: page.tsx
client/components/: CanvasBoard.tsx  ChatSection.tsx  JoinRoom.tsx  PlayersSection.tsx
client/hooks/: useRoomSocket.ts
client/lib/: config.ts  types.ts
client/lib/actions/: rooms.ts
server/: .env  main.py  pyproject.toml
server/app/: config.py
server/app/api/: room.py
server/app/config/: logger.py  memory.py  settings.py  words.py
server/app/services/: redis_services.py  schema.py
server/app/ws/: ws.py
