[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "colorlog>=6.10.1",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "uvicorn>=0.38.0",
]
